--- a/css/main.css
+++ b/css/main.css
@@ -22,16 +22,38 @@ header {
     display: block;
     margin: 0 auto; /* margin top and bottom 0, 
     margin left and right auto or equal */
+    box-shadow: 2px 2px 1px rgba(0,0,0,.5);
+}
+
+#character_nav {
+    background-color: #675050;
+    background-image: url(../images/characters_art_mas_mob_01.jpeg);
+    background-size: cover;
+    background-blend-mode: exclusion;
 }
 
 .characters {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 14px;
 }
 
 .characters li {
     height: 220px;
-    padding: 15px 8px;
+    background-color: black;
+    margin:10px 8px;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0 150px 0 0 red inset;
+    transition: box-shadow 0.2s ease-in-out;
+}
+
+.characters li:hover {
+    box-shadow: 0 220px 0 0 red inset;
 }
 
 .characters li h3 {
@@ -73,3 +95,20 @@ header {
 #hulk:hover, #thor:hover, #widow:hover {
     background-position-y: 150px;
 }
+
+#instructions {
+    padding:20px;
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+    padding: 20px 0;
+}
+
+/* .sticky-footer {
+    position: sticky;
+    top: 100%;
+    height: 80px;
+    background-color: rgb(40,37,37);
+} */
